# uqlab-streamlit

./: .bobignore  .env.example  .env.production.example  .gitignore  .gitignore_parent  .gitmodules  .ruffignore  2D_SWEEP_GUIDE.md  ALL_FIXES_APPLIED.md  API_ENDPOINTS_EXPLAINED.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_IMPROVEMENT_PROPOSAL.md  ARCHITECTURE_SIMPLE.md  AUROC_METRICS_EXPLAINED.md  BACKEND_FIX_SUMMARY.md  BAR_CHART_REMOVAL.md  BATCH_EXPERIMENTS_DESIGN.md  BATCH_EXPERIMENTS_DISPLAY_FIX.md  BATCH_EXPERIMENT_FIX.md  BATCH_EXPERIMENT_UX_IMPROVEMENTS.md  CODEBASE_STRUCTURE_AUDIT.md  CODE_FLOW_DOCUMENTATION.md  COMPLETE_SYSTEM_FLOW.md  COMPONENT_REUSE_ANALYSIS.md  DATASET_CLASSES_ANALYSIS.md  DEPENDENCY_ANALYSIS_AND_FINAL_RECOMMENDATION.md  DEPENDENCY_MAP.md  DETAILED_METRICS_FIX.md  DUAL_FACADE_ARCHITECTURE.md  ENTERPRISE_VALIDATION_COMPLETE.md  EXECUTION_FLOW_AND_CONFIG_GUIDE.md  EXPERIMENT_DETAILS_ENHANCEMENT.md  FILE_ORGANIZATION_ANALYSIS.md  FINAL_ARCHITECTURE_DECISION.md  FINAL_ARCHITECTURE_SCHEMA_UNIFIED.md  FINAL_IMPLEMENTATION_PLAN.md  FIX_SINGLE_POINT_VISUALIZATION.md  FROZEN_MODEL_FIX.md  GITHUB_ISSUES.md  (+110 more)
.docs/: ce-deployment.md  maintenance.md  oc-deployment.md
backend/: .gitignore  .pre-commit-config.yaml  BACKEND_MODES.md  BACKFILL_README.md  Dockerfile  README.md  RUN_LABEL_NOISE_SWEEP_FLOW.md  STORAGE_ARCHITECTURE.md  _python.sh  backfill_signals.py  fix_python314.sh  pyproject.toml  run_benchmark_migration.py  run_dev.py  run_method_type_migration.py  run_migration.py  run_prod.py  start_backend.sh  start_backend_prod.sh
configs/: CONFIG_AND_IMPORTS_STATUS.md  MIGRATION_STATUS.md  README.md  example_cnn_mcdropout.yaml
docs/: LAUNCH_TO_VISUALIZATION_FLOW copy.md  LAUNCH_TO_VISUALIZATION_FLOW.md  README.md  UQLAB_FLOW.md
examples/: example_batch_sweep.py  example_cnn.py  example_dinov2.py  example_resnet.py  minimal_experiment.py
frontend/: .env  Dockerfile  README.md  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
notebooks/: attribution_distribution_uncertainty.ipynb  bootstrap_uqlab.py  cifar10_paper_flow.ipynb  four_region_benchmark.ipynb  resnet_baseline_experiment.ipynb  uncertainty_visualization_demo.ipynb  watsonx_deployment_experiment.ipynb
scripts/: .env.production.example  PRINT_SYSTEM.md  README.md  REFACTORING.md  calculate_ude_scores.py  ce-deploy.sh  download_cifar10n.py  fix_validation_system.sh  generate-client.sh  generate_thesis_diagram.py  oc-deploy.sh  python_brew_uv_sync.sh  report_unified.py  run_fast_uncertainty_classification.py  run_paper_benchmarks.py  run_validation_experiments.py  train.py  upgrade_bash.md  validate_architectures.py  validate_per_class_campaign.py
streamlit_frontend/: app.py  config.py
tests/: README.md  __init__.py  test_aleatoric_split.py  test_attribution_distribution.py  test_build_results_markdown.py  test_campaign_config_timeline.py  test_campaign_paper_score.py  test_campaign_report.py  test_campaign_sections.py  test_checkpoint_arsenal.py  test_config_schema.py  test_dataloader_workers.py  test_dataset_factory.py  test_dead_code_imports.py  test_disentanglement_launcher.py  test_disentangling_model.py  test_eval_artifacts.py  test_eval_signal_config.py  test_evaluation.py  test_experiment_log.py  test_experiment_setup.py  test_facade_data_pipeline.py  test_four_region_eval.py  (+24 more)
(+755 files in other folders)
